changed prompt alignment in the css file, and modified the script to check whether or not the checkboxes are checked. Fixed bug where selected character sets weren't proerly concat-ed to the set of possible characters.

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ button[disabled] {
 .prompt{
   display: none;
   /* display: flex; */
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   margin: 0 auto;
   padding: 30px 40px;
